--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -1,10 +1,14 @@
 - id: blog
   translation: 'Blog'
 - id: lastPosts
-  translation: 'Últimos Posts'
+  translation: 'Últimos posts'
 - id: authors
   translation: 'Autores'
 - id: author
   translation: 'Autor'
 - id: about
   translation: 'Sobre'
+- id: notFound
+  translation: 'Não encontrado'
+- id: home
+  translation: 'Home'
