--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -12,3 +12,7 @@
   translation: 'Não encontrado'
 - id: home
   translation: 'Home'
+- id: title404
+  translation: 'Ops! Página não encontrada'
+- id: content404
+  translation: 'Não encontramos o que você está procurando, volte para home'
