--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -65,7 +65,7 @@
 - id: commonQuestions
   translation: 'Perguntas frequentes'
 - id: getAQuote
-  translation: 'Faça um orçamento'
+  translation: 'Solicite um orçamento'
 
 
 
