fix: partners and programs partials

--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -60,8 +60,8 @@
   translation: 'Parceiros'
 - id: somePartners
   translation: 'Alguns parceiros'
-- id: readMore
-  translation: 'Ler Mais'
+- id: knowMore
+  translation: 'Saiba mais'
 - id: send
   translation: 'Enviar'
 - id: subject
