fix: multilanguage pages

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -59,7 +59,7 @@
 - id: partners
   translation: 'Partners'
 - id: somePartners
-  translation: 'Some partners'
+  translation: 'Partners'
 - id: knowMore
   translation: 'Know more'
 - id: send
