--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -59,7 +59,7 @@
 - id: partners
   translation: 'Socios'
 - id: somePartners
-  translation: 'Algunos socios'
+  translation: 'Socios'
 - id: knowMore
   translation: 'Saber más'
 - id: send
